--- a/index.html
+++ b/index.html
@@ -340,13 +340,17 @@
 
         <footer class="footer">
             <ul class="nav">
-                <li class="nav__item"><a href="#" class="link__item">Find your dream home</a></li>
-                <li class="nav__item"><a href="#" class="link__item">Request proposal</a></li>
-                <li class="nav__item"><a href="#" class="link__item">Download home planner</a></li>
-                <li class="nav__item"><a href="#" class="link__item">Contact us</a></li>
-                <li class="nav__item"><a href="#" class="link__item">Submit your property</a></li>
-                <li class="nav__item"><a href="#" class="link__item">Come work with us!</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Find your dream home</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Request proposal</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Download home planner</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Contact us</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Submit your property</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Come work with us!</a></li>
             </ul>
+
+            <p class="footer__copyright">
+                &copy; Copyright 2019 by Shaxa Y. Designed by Jonas Schmedtann.
+            </p>
         </footer>
     </body>
 </html>
